<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">mafqodati</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1IjoiemV5YWRraCIsImEiOiJjbHFncmp2MjUwZDNzMmpvMHFobzFyN2M3In0.Cpw0s7GBrLHMrXg91Ia5xw</string>
    <string name="post_title">Post Title</string>
    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="search">Search</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="delete">Delete</string>
    <string-array name="jordan_cities">
        <item>Amman</item>
        <item>Irbid</item>
        <item>Zarqa</item>
        <item>Jerash</item>
        <item>Ajloun</item>
        <item>Mafraq</item>
        <item>Madaba</item>
        <item>Karak</item>
        <item>Tafilah</item>
        <item>Maan</item>
        <item>Aqaba</item>
    </string-array>

    <string-array name="lost_found_categories">
        <item>Electronics</item>
        <item>Clothing</item>
        <item>Accessories</item>
        <item>Documents</item>
        <item>Keys</item>
        <item>Wallets/Purses</item>
        <item>Books</item>
        <item>Toys</item>
        <item>Jewelry</item>
        <item>Sports Equipment</item>
        <item>Stationery</item>
        <item>Tools</item>
        <item>Other</item>
    </string-array>
    <string-array name="type">
        <item>Lost</item>
        <item>Found</item>
    </string-array>

    <string-array name="fields_order">
        <item>creationDate</item>
    </string-array>
    <string-array name="fields_direction">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="city">City</string>
    <string name="owner_info">Owner Info</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_the_otp">Didn\\\'t receive the OTP?</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile_number">Enter Mobie Number</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="_continue">Continue</string>
    <string name="chats_will_be_added_soon">Chats Will Be Added Soon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">Username</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="save">Save</string>
    <string name="edit_post">Edit Post</string>


</resources>